Adjusted height to fix appearance on mobile

--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@
 }
 
 :root {
+  --viewport-height: 100vh;
   --main-width: clamp(250px, 100vw, 500px);
-  --main-height: clamp(250px, 100vh, 1000px);
+  --main-height: clamp(250px, var(--viewport-height), 1000px);
   --screen-height: calc(0.3 * var(--main-height));
   /* prettier-ignore */
   --keyboard-height: calc(var(--main-height) 
@@ -61,7 +62,7 @@
 
 body {
   width: 100vw;
-  height: 100vh;
+  height: var(--viewport-height);
   /* height: -webkit-fill-available; */
 }
 
@@ -171,8 +172,8 @@ body {
 
 @media screen and (max-width: 1000px) and (min-aspect-ratio: 16/9) {
   :root {
-    --main-width: min(max(100vw, 250px), 1000px);
-    --main-height: min(max(100vh, 250px), 500px);
+    --main-width: clamp(250px, 100vw, 1000px);
+    --main-height: clamp(250px, var(--viewport-height), 500px);
     /* prettier-ignore */
     --button-width: calc((var(--main-width) - 7 * var(--gap-size) - 2 * var(--padding-size)) / 8);
     /* prettier-ignore */
